<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>ru.practice.kotouslugi</groupId>
    <artifactId>kotouslugi-parent</artifactId>
    <version>2.0</version>
    <name>kotouslugi</name>
    <packaging>pom</packaging>

  <properties>
    <java.version>17</java.version>
    <spring.boot.version>3.2.1</spring.boot.version>
    <springdoc.version>2.5.0</springdoc.version>
    <swagger.annotations.version>1.6.1</swagger.annotations.version>
  </properties>

  <modules>
    <module>kotouslugi-api</module>
    <module>kotouslugi-core</module>
    <module>kotouslugi-report-aggregate</module>
  </modules>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>UTF-8</encoding>
          <compilerArgs>
            <arg>-parameters</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <!-- Maven Resources Plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <configuration>
          <encoding>UTF-8</encoding>
          <outputDirectory/>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.8</version>
        <configuration>
          <!--                    Исключить классы для проверки. обычно это модель, исключения и конфиги-->
          <excludes>
            <exclude>**/model/**/*</exclude>
            <exclude>**/exception/*</exclude>
            <exclude>**/mapper/*</exclude>
            <exclude>**/config/*</exclude>
            <exclude>**/config/*</exclude>
            <exclude>**/ApiApplication.class</exclude>
          </excludes>
        </configuration>

        <executions>
          <execution>
            <id>default-prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <configuration>
              <destFile>${project.build.directory}/jacoco.exec</destFile>
              <propertyName>jacocoArgLine</propertyName>
            </configuration>
          </execution>
          <execution>
            <id>default-report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
            <configuration>
              <dataFile>${project.build.directory}/jacoco.exec</dataFile>
            </configuration>
          </execution>

          <execution>
            <id>check</id>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <rules>
                <rule>
                  <element>BUNDLE</element>
                  <limits>
                    <limit>
                      <counter>INSTRUCTION</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>0%</minimum>
                    </limit>
                    <limit>
                      <counter>BRANCH</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>0%</minimum>
                    </limit>

                  </limits>
                </rule>
              </rules>
              <dataFile>${project.build.directory}/jacoco.exec</dataFile>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M6</version>
        <configuration>
          <argLine>
            ${jacocoArgLine}
            --add-opens=java.base/java.net=ALL-UNNAMED
            --add-opens=java.base/java.lang.ref=ALL-UNNAMED
            --add-opens=java.base/java.lang=ALL-UNNAMED
            --add-opens=java.base/java.security=ALL-UNNAMED
            --add-opens=java.base/java.util=ALL-UNNAMED
            --add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED
            --add-opens=java.desktop/javax.swing.text=ALL-UNNAMED
            --add-opens=java.desktop/javax.swing=ALL-UNNAMED
            --add-opens=java.desktop/java.awt=ALL-UNNAMED
            --add-opens=java.desktop/java.awt.event=ALL-UNNAMED
            --add-opens=java.prefs/java.util.prefs=ALL-UNNAMED
            --add-opens=jdk.jshell/jdk.jshell=ALL-UNNAMED
            --add-modules=jdk.jshell
            --add-exports=java.desktop/sun.awt=ALL-UNNAMED
            --add-exports=java.desktop/java.awt.peer=ALL-UNNAMED
            --add-exports=java.desktop/com.sun.beans.editors=ALL-UNNAMED
            --add-exports=java.desktop/sun.swing=ALL-UNNAMED
            --add-exports=java.desktop/sun.awt.im=ALL-UNNAMED
            --add-exports=java.desktop/com.sun.java.swing.plaf.motif=ALL-UNNAMED
            --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
            --add-exports=java.management/sun.management=ALL-UNNAMED
            --add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED
            --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
            --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
            --add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
            --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
            --add-exports=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED
            --add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
            --add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
            --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
            --add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
            --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
            --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
            --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
            --add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
            --add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
            --add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
            --add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED
            --add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
            --add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
            --add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
            --add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
            --add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
            --add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
            --add-exports=jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED
            --add-exports=jdk.jdeps/com.sun.tools.javap=ALL-UNNAMED
            --add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED
            --add-opens=java.desktop/javax.swing.plaf.synth=ALL-UNNAMED
            --add-opens=java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED
            --add-opens=java.desktop/sun.awt.shell=ALL-UNNAMED
            --add-opens=java.desktop/sun.awt.im=ALL-UNNAMED
            --add-opens=java.base/java.nio=ALL-UNNAMED
          </argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
